# ROS2_Lessons

./: .gitignore  README.md
Docker/: Dockerfile  build.sh  compose.yaml
ros2_ws/scripts/: build.sh  run.sh
ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msgs/msg/: BoatStatus.msg  WindexDataMsg.msg
ros2_ws/src/demo_parameters/: CMakeLists.txt  package.xml
ros2_ws/src/demo_parameters/config/: endpoints.yaml  params.yaml
ros2_ws/src/demo_parameters/include/demo_parameters/: ros_endpoints.hpp  wind_monitor_node.hpp  wind_publisher_node.hpp
ros2_ws/src/demo_parameters/launch/: wind_alarm.launch.py
ros2_ws/src/demo_parameters/src/: wind_monitor_main.cpp  wind_monitor_node.cpp  wind_publisher_main.cpp  wind_publisher_node.cpp
ros2_ws/src/pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/pubsub/include/pubsub/: command_generator_node.hpp  command_processor_node.hpp
ros2_ws/src/pubsub/launch/: full.generator.launch.py  generator.launch.py
ros2_ws/src/pubsub/src/: command_generator_main.cpp  command_generator_node.cpp  command_processor_main.cpp  command_processor_node.cpp
ros2_ws/src/pubsub_custom/: CMakeLists.txt  package.xml
ros2_ws/src/pubsub_custom/config/: endpoints.yaml
ros2_ws/src/pubsub_custom/include/pubsub_custom/: ros_endpoints.hpp  status_publisher_node.hpp  status_subscriber_node.hpp
ros2_ws/src/pubsub_custom/launch/: custom_status.launch.py
ros2_ws/src/pubsub_custom/src/: status_publisher_main.cpp  status_publisher_node.cpp  status_subscriber_main.cpp  status_subscriber_node.cpp
ros2_ws/src/real_case/: CMakeLists.txt  package.xml
ros2_ws/src/real_case/config/: endpoints.yaml
ros2_ws/src/real_case/include/real_case/: central_node.hpp  dashboard_elaboration_node.hpp  ros_endpoints.hpp
ros2_ws/src/real_case/launch/: real_case.launch.py
ros2_ws/src/real_case/src/: central_node.cpp  dashboard_elaboration_node.cpp
ros2_ws/tools/: userful_terminal.txt
