<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pubsub_custom</name>
  <version>0.0.0</version>
  <description>Demo per messaggi custom</description>
  <maintainer email="ettore.cirillo.dev@gmail.com">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>custom_msgs</depend> <!-- FONDAMENTALE -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>